fix: use arrays syntax of supported java versions